# sit-qoe-prediction

./: .gitmodules  LICENSE  README.md  pyproject.toml  requirements.txt
android_app/QoEModel/: .gitignore  settings.gradle
android_app/QoEModel/app/: build.gradle
android_app/cnn_bak/model/: model_0.pb  model_1.pb  (+3 more)
datasets/content/: content.csv  survey_lab.xlsx  survey_lab_facebook (copy).xlsx  survey_lab_facebook.xlsx
datasets/lfovia/: README.txt
datasets/live_mobile_stall_2/: videoMetaData.mat
datasets/live_netflix/: ChangeLog.txt  readme.txt
datasets/live_netflix_2/: readme.txt
notebooks/: QoE CNN.Rmd  QoE LSTM.Rmd  QoE Wavenet.Rmd  Visualize Databases.Rmd  grid_results_r8_nD1_selu.json  grid_results_r8_nD2_selu.json  old_Cumulative.Rmd  output_tcn.txt  playground.Rmd  playground_Content.Rmd  playground_Cumulative_Journal.Rmd  sit_qoe  testY_0.txt
notebooks/mobile/: output_qoecnn.txt
others/curve_fitting/: cf.m  compare.mat  compare_model.m  compare_test.mat  f_cumulative.m  f_primacy.m  f_recency.m  f_repetition.m  f_test.m  kz.m  rmse.m  scale.m  test.mat  train.mat
others/socket_lstm/: socket_lstm.py
others/survey/: .gitignore  package-lock.json  package.json
scripts/: h5_pb.sh
sit_qoe/: __init__.py
sit_qoe/data/: __init__.py  core.py  dataset.py  dataset_info.py  generate_timeseries.py  splits.py
sit_qoe/models/: __init__.py  qoe_base.py  qoe_bidirectional_lstm.py  qoe_cnn.py  qoe_lstm.py  qoe_tcn.py  qoe_wavenet.py
sit_qoe/utils/: __init__.py  cached_property.py  get_best.py  losses.py  metrics.py  preprocess.py  visualize.py
(+620 files in other folders)
